# rust-playground

./: .gitignore
codewars/: Cargo.toml
codewars/src/: main.rs
file-search/: Cargo.toml
file-search/src/: main.rs  test.txt
file-server/src/: main.rs
flocking/: Cargo.toml
flocking/src/: entity.rs  main.rs  space.rs
fraction/: Cargo.toml
fraction/src/: fraction.rs  lib.rs
github/: Cargo.toml
github/src/: main.rs
graph-rst/: Cargo.toml  Makefile  readme.org
graph-rst/src/: main.rs
how-i-start/: Cargo.toml  Dockerfile  docker.nix  helloworld.nix  readme.org  shell.nix
how-i-start/nix/: sources.json
how-i-start/src/: main.rs
jenkins/: Cargo.toml  README.org
jenkins/src/: main.rs
linux-exe/: Makefile  readme.org  shell.nix
linux-exe/delf/: Cargo.toml
linux-exe/delf/src/: lib.rs  parse.rs
linux-exe/elk/: Cargo.toml
linux-exe/elk/samples/: entrypoint  entrypoint.c  hello  hello.asm  nodata  nodata.asm
linux-exe/elk/src/: main.rs
linux-exe/nix/: rust.nix
nix-base/: docker.nix
nix-base/nix/: rust.nix
oauth2/: Cargo.toml  docker.nix  oauth2-server.nix
oauth2/src/: lib.rs  pkce.rs  token.rs  user.rs  util.rs
parser/: Cargo.toml
parser/src/: main.rs
python/: Cargo.toml  readme.org
python/python-macro/: Cargo.toml
python/python-macro/src/: lib.rs
python/src/: main.rs  py_macro_rules.rs
roguelike/: Cargo.toml
roguelike/src/: main.rs
rust-futures-waytoodeep/: Cargo.toml
rust-futures-waytoodeep/src/: dumb.rs  main.rs
server/: Cargo.toml  docker.nix  readme.org  shell.nix
server/files/: greedy.task  parse-task.fish
server/nix/: rust.nix  sources.json
server/src/: main.rs
