[package]
name = "github"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
dotenv = "0.15.0"
octocrab = "0.13.0"
reqwest = "0.11.6"
serde = "1.0.130"
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["full", "macros"] }
