[package]
name = "jenkins"
version = "0.1.0"
edition = "2018"
default-run = "jenkins"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
jenkins_api = "0.8.0"
serde = "1.0.130"

[[bin]]
name = "jenkins"
path = "src/main.rs"

[[bin]]
name = "last-year-build-info"
path = "src/bin/last-year-build-info.rs"
