[package]
name = "oauth2"
version = "0.1.0"
edition = "2018"
authors = ["sstoltze <sstoltze@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"

[[bin]]
name = "client"

[dependencies]
rocket = "0.4.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
base64 = "0.13.0"
sha2 = "0.9.5"
reqwest = { version = "0.11.3", features = ["blocking"] }

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
