[package]
name = "server"
version = "0.1.0"
authors = ["sstoltze <sstoltze@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.7" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]
